# agent-boundary-v1

./: .gitignore  AgentBoundary_v1_Training.ipynb  Blog.md  Dockerfile  README.md  WRITEUP.md  __init__.py  app.py  check_all.py  client.py  generate_charts.py  inference.py  models.py  openenv.yaml  policy_learning.py  pyproject.toml  requirements.txt
artifacts/: supervised_traces.jsonl
artifacts/evaluation/: policy_comparison.csv  policy_comparison.json
artifacts/llm-grpo/: llm_eval.json
artifacts/training/: training_history.json  training_summary.json
evaluation/: common.py  compare_policies.py  heuristic_baseline.py  plot_results.py  policies.py
server/: __init__.py  agentv1_environment.py  app.py  grader.py  task_bank.py
training/: generate_episodes.py  train_grpo.py  train_llm_grpo.py
